[gd_scene load_steps=8 format=2]

[ext_resource path="res://materiais/imagem/imagem.jpeg" type="Texture" id=1]
[ext_resource path="res://fonts/STENCIL.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://script/chute_grajau.gd" type="Script" id=3]
[ext_resource path="res://materiais/botõens/botãoAoClicar.png" type="Texture" id=4]
[ext_resource path="res://materiais/botõens/BotaoClique.png" type="Texture" id=5]
[ext_resource path="res://materiais/botõens/botão.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 17
font_data = ExtResource( 2 )

[node name="chute_grajau" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 200, 353 )
scale = Vector2( 1.54598, 1.79873 )
texture = ExtResource( 1 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 122.0
margin_top = 156.0
margin_right = 265.0
margin_bottom = 205.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )
expand = true

[node name="Label" type="Label" parent="TextureButton"]
margin_left = 3.0
margin_top = 4.0
margin_right = 136.0
margin_bottom = 39.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "SAO LUIS 1928"
align = 1
valign = 1

[node name="TextureButton2" type="TextureButton" parent="."]
margin_left = 122.0
margin_top = 280.0
margin_right = 265.0
margin_bottom = 328.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )
expand = true

[node name="Label2" type="Label" parent="TextureButton2"]
margin_left = 3.0
margin_top = 7.0
margin_right = 133.0
margin_bottom = 38.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "SAO LUIS 1950"
align = 1
valign = 1

[node name="TextureButton3" type="TextureButton" parent="."]
margin_left = 122.0
margin_top = 401.0
margin_right = 265.0
margin_bottom = 452.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )
expand = true

[node name="Label3" type="Label" parent="TextureButton3"]
margin_left = 4.0
margin_top = 7.0
margin_right = 132.0
margin_bottom = 41.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "SAO LUIS 1988"
align = 1
valign = 1

[node name="voltar" type="TextureButton" parent="."]
margin_left = 122.0
margin_top = 517.0
margin_right = 265.0
margin_bottom = 571.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )
expand = true

[node name="voltar" type="Label" parent="voltar"]
margin_left = 6.0
margin_top = 3.0
margin_right = 131.0
margin_bottom = 41.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "voltar"
align = 1
valign = 1

[connection signal="pressed" from="TextureButton" to="." method="Button_sao_luis1928"]
[connection signal="pressed" from="TextureButton2" to="." method="Button2_sao_luis1950"]
[connection signal="pressed" from="TextureButton3" to="." method="Button3_sao_luis1988"]
[connection signal="pressed" from="voltar" to="." method="_on_voltar_pressed"]
