extends Control


func _ready():
	pass


func Button_sao_luis1928():
	get_tree().change_scene("res://scenes/sao_luis1928.tscn")
	pass # Replace with function body.


func Button2_sao_luis1950():
	get_tree().change_scene("res://scenes/sao_luis1950.tscn")
	pass # Replace with function body.


func Button3_sao_luis1988():
	get_tree().change_scene("res://scenes/sao_luis1988.tscn")
	pass # Replace with function body.


func _on_voltar_pressed():
	get_tree().change_scene("res://scenes/tela_grajau.tscn")
	pass # Replace with function body.
